# Password_manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/khizex_pm/: __init__.py  logging_config.py
src/khizex_pm/cli/: __init__.py  app.py
src/khizex_pm/crypto/: __init__.py  aead.py  kdf.py  memory.py  secure_random.py
src/khizex_pm/session/: __init__.py  autolock.py  clipboard.py
src/khizex_pm/storage/: __init__.py  db.py  schemas.py
src/khizex_pm/vault/: __init__.py  exceptions.py  export_import.py  models.py  service.py
tests/: test_crypto.py  test_vault.py
